--- a/apps/facilitator/vercel.json
+++ b/apps/facilitator/vercel.json
@@ -1,9 +1,11 @@
 {
-  "functions": {
-    "src/index.ts": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 60
+  "buildCommand": "cd ../.. && pnpm install && cd apps/facilitator && pnpm build",
+  "installCommand": "cd ../.. && pnpm install",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api"
     }
-  }
+  ]
 }
 
