Update typescript config

--- a/apps/facilitator/tsconfig.json
+++ b/apps/facilitator/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "api/**/*"],
   "exclude": ["node_modules"]
