--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -2,6 +2,7 @@
   "name": "@super-x402/website",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
