Update vercel config

--- a/apps/website/vercel.json
+++ b/apps/website/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": "nextjs",
-  "installCommand": "corepack enable && pnpm install --frozen-lockfile",
-  "buildCommand": "pnpm build"
+  "installCommand": "cd ../.. && corepack enable && pnpm install --frozen-lockfile",
+  "buildCommand": "cd ../.. && NEXT_DISABLE_TURBOPACK=1 pnpm --filter @super-x402/website build"
 }
 
