--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dev:website": "pnpm --filter @super-x402/website dev"
   },
   "devDependencies": {
+    "next": "16.0.10",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "@types/node": "^20.14.2",
     "@types/uuid": "^9.0.8"
   }
