Don't use turbopack

--- a/apps/website/vercel.json
+++ b/apps/website/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd ../.. && pnpm --filter @super-x402/website build",
+  "buildCommand": "cd ../.. && NEXT_DISABLE_TURBOPACK=1 pnpm --filter @super-x402/website build",
   "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
 }
 
