--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "packageManager": "pnpm@10.0.0",
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/*"
   ],
   "scripts": {
     "build": "pnpm --filter @super-x402/website build",
