--- a/apps/facilitator/.env.example
+++ b/apps/facilitator/.env.example
@@ -1,8 +1,6 @@
-# Base Sepolia RPC endpoint
-BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
 
-# HTTP port for the facilitator server
+FACILITATOR_PRIVATE_KEY=your_private_key_here
+BASE_RPC_URL=https://rpc-endpoints.superfluid.dev/base-mainnet
 PORT=4020
+ALLOWED_ORIGIN=http://localhost:3000,http://localhost:5173
 
-# Optional comma-separated list of origins allowed by CORS
-# ALLOWED_ORIGIN=http://localhost:5173
